# BookLib

./: .gitignore  README.md
src/booklib/: CMakeLists.txt  addbookdialog.cpp  addbookdialog.h  addbookdialog.ui  addreaderdialog.cpp  addreaderdialog.h  book.cpp  book.h  contentitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryrepository.cpp  memoryrepository.h  reader.cpp  reader.h  removebookconfirmationdialog.cpp  removebookconfirmationdialog.h  removereaderconfirmationdialog.cpp  removereaderconfirmationdialog.h  removereaderconfirmationdialog.ui  repository.cpp  repository.h  showbooksdialog.h  unitofwork.cpp  unitofwork.h
src/booklib/dialogs/: addbookdialog.cpp  addbookdialog.h  addreaderdialog.h  addreaderdialog.ui  removebookconfirmationdialog.cpp  removebookconfirmationdialog.h  removebookconfirmationdialog.ui  removereaderconfirmationdialog.h  showbooksdialog.cpp  showbooksdialog.h  showbooksdialog.ui
src/booklib/entities/: book.cpp  book.h  contentitem.h  reader.cpp  reader.h
